--- a/paper/main_wrangling.bib
+++ b/paper/main_wrangling.bib
@@ -763,6 +763,16 @@
   timestamp = {2019-10-29T01:14:50Z}
 }
 
+@article{OserZur2025,
+  title = {Guide for the ({{Soon-to-be}}) {{Perplexed}}: {{Considerations}} for {{Scholars Launching}} and {{Leading Survey Data Harmonization Journeys}}},
+  author = {Oser, Jennifer and Zur, Barak},
+  date = {2025},
+  journaltitle = {PS: Political Science \& Politics},
+  volume = {0},
+  number = {0},
+  pages = {Online}
+}
+
 @article{ReinhartRogoff2010,
   title = {Growth in a Time of Debt},
   author = {Reinhart, Carmen M. and Rogoff, Kenneth S.},
