--- a/paper/wrangleData.qmd
+++ b/paper/wrangleData.qmd
@@ -607,10 +607,11 @@ The "first-order" openness refers to sharing code and outputs from the analysis 
 Empirical evidence has indicated the severe consequences of neglecting second-order opening.
 Recent research has found that the variation in the estimated effects caused by researchers may outweigh the population's variation [@Holzmeister2024].
 Within this researcher-choice variation, a substantial portion comes from the data-wrangling process [@Huntington-Klein2025, 33].
-In a "many-analyst" analysis, @Huntington-Klein2025 requested 146 research teams to complete the same research task, in which group A decided how to accomplish the task all by themselves, group B was given a specified research design, and group C was given the same research design and a pre-cleaned data set.
-The study found that actually it is group B that generated the highest outcome variation---even higher than group A.
-The teams who were given the pre-cleaned data set generated the lowest outcome variation.
-These findings indicate that the research replicability cannot be secured by first-order opening without second-order opening.
+In a "many-analyst" analysis, @Huntington-Klein2025 requested 146 research teams to complete the same research task, in which Group A decided how to accomplish the task all by themselves, Group B was given a specified research design, and Group C was given the same research design and a pre-cleaned data set.
+Group B, which used the same design but processed the data themselves, produced the highest variation in results.
+In contrast, Group C produced the most consistent results.
+These findings underscore the importance of openness about data preparation and processing decisions ("second-order" openness).
+
 
 If researchers apply our suggestions of team-based construct building, systematic data selection, and automated data entry, the second-order opening will be both feasible and efficient.
 Along with a clearly conceptualized theoretical framework, researchers can simply share their programming scripts for data downloading, formatting, and wrangling, and thereby ensure that the full pipeline is documented and reproducible.^[
