--- a/paper/wrangleData.qmd
+++ b/paper/wrangleData.qmd
@@ -805,7 +805,7 @@ ls_packages <- map(kw_short, \(keyword){
 tt(ls_packages$download, 
   width = c(0.2, 0.5, 0.3),
   caption = "Example packages for downloading data with API\\label{tbl-download}") |> 
-    theme_latex(tabularray_inner = "stretch=0",
+     style_tt(theme = "latex", tabularray_inner = "stretch=0",
       multipage = TRUE) |> 
   style_tt(fontsize = 0.7)
 
@@ -817,7 +817,7 @@ tt(ls_packages$download,
 tt(ls_packages$clean, 
   width = c(0.2, 0.5, 0.3),
   caption = "Example packages for cleaning data with API\\label{tbl-clean}") |> 
-    theme_latex(tabularray_inner = "stretch=0",
+    style_tt(theme = "latex", tabularray_inner = "stretch=0",
       multipage = TRUE) |> 
   style_tt(fontsize = 0.7)
 
@@ -829,7 +829,7 @@ tt(ls_packages$clean,
 tt(ls_packages$transform, 
   width = c(0.2, 0.5, 0.3),
   caption = "Example packages for transforming data with API\\label{tbl-transform}") |> 
-    theme_latex(tabularray_inner = "stretch=0",
+   style_tt(theme = "latex",tabularray_inner = "stretch=0",
       multipage = TRUE) |> 
   style_tt(fontsize = 0.7)
 
