--- a/paper/submission/memo_r3.qmd
+++ b/paper/submission/memo_r3.qmd
@@ -30,10 +30,15 @@ Both reviewers and the editors commented on terms and phrases that could benefit
 In this revised version, we have refined the framing and added explanations where needed.
 
 In particulary, following Reviewer 1's (R1) suggestion, we now clarify the distinction between survey and aggregate data and explain their harmonization process in greater detail (see p. XXXX). 
-We also added the term *“retrospective data harmonization”* alongside *“ex-post data harmonization”* to ensure that readers familiar with either expression can follow our discussion (see p. XXXX).
+We also follow Reviewer 2's (R2) suggestion adding the term *"retrospective data harmonization"* alongside *"ex-post data harmonization"* to ensure that readers familiar with either expression can follow our discussion (see p. XXXX).
+
+In the comments, R1 also showed an interest in how `DCPOtools` works.
+We appreciate this attention to our software. 
+Although considering the word limits we may not have much room to expand the introduction of `DCPOtools` more in detail, we have planned to publish a specific vignette together with the software to help users better understand how the software works.
+This new version also points out this plan in XXXX and direct readers who are interested in the operation to the correct place for further information. 
 
 **Expanded Literature Review**
-We thank Reviewer 2 (R2) for highlighting additional relevant scholarship on data harmonization. 
+We thank R2 for highlighting additional relevant scholarship on data harmonization. 
 We have now incorporated these works to engage with the broader literature in this new version (see p. XXXX).
 
 **Further Validation of Step 2**
@@ -43,7 +48,7 @@ The revised version now explicitly acknowledges this limitation (see p. XXXX).
 We also thank the editor for noting the connection between our discussion and other contributions in this symposium regarding software usage. 
 We have incorporated this work into the manuscript (see p. XXXX).
 
-Finally, **Polishing and Readability**
+Finally, **Polishing**
 We are grateful for the editors' and reviewers' suggestions to further improve the manuscript's clarity and framing. 
 The revised version has been thoroughly edited and proofread. 
 If any parts remain unclear, we will gladly make further revisions.
