--- a/paper/wrangleData.qmd
+++ b/paper/wrangleData.qmd
@@ -73,16 +73,16 @@ title: |
   | A Practical Routine for Getting
   | Past the 'Janitor Work'
 #subtitle: "Preliminary version. Do not circulate without permission."
-#abstract: |
-#    This article focuses on a preliminary step in any retrospective (or "ex-post")  data harmonization project---wrangling the pre-harmonized data---and suggests a practical routine for helping researchers reduce human errors in this often-tedious work. 
-#    The routine includes three steps: (1) *T*eam-based concept construct and data selection; (2) Data entry *a*utomation; and (3) "Second-order" *o*pening---a "Tao" of data wrangling. 
-#    We illustrate the routine with the examples of pre-harmonizing procedures used to produce the Standardized World Income Inequality Database (SWIID), a widely used database that uses Gini indices from multiple sources to create comparable estimates, and the Dynamic Comparative Public Opinion (DCPO) project, which creates a workflow for harmonizing aggregate public opinion data.
-#keywords: 
-#  - Data generation process
-#  - Machine assistance
-#  - Manual coding
-#  - Data cleaning
-#  - Data management
+abstract: |
+   This article focuses on a preliminary step in any retrospective (or "ex-post")  data harmonization project---wrangling the pre-harmonized data---and suggests a practical routine for helping researchers reduce human errors in this often-tedious work. 
+   The routine includes three steps: (1) *T*eam-based concept construct and data selection; (2) Data entry *a*utomation; and (3) "Second-order" *o*pening---a "Tao" of data wrangling. 
+   We illustrate the routine with the examples of pre-harmonizing procedures used to produce the Standardized World Income Inequality Database (SWIID), a widely used database that uses Gini indices from multiple sources to create comparable estimates, and the Dynamic Comparative Public Opinion (DCPO) project, which creates a workflow for harmonizing aggregate public opinion data.
+keywords: 
+  - Data generation process
+  - Machine assistance
+  - Manual coding
+  - Data cleaning
+  - Data management
 ---
 
 ```{r}
@@ -805,7 +805,7 @@ ls_packages <- map(kw_short, \(keyword){
 tt(ls_packages$download, 
   width = c(0.2, 0.5, 0.3),
   caption = "Example packages for downloading data with API\\label{tbl-download}") |> 
-     style_tt(theme = "latex", tabularray_inner = "stretch=0",
+     theme_latex(tabularray_inner = "stretch=0",
       multipage = TRUE) |> 
   style_tt(fontsize = 0.7)
 
@@ -817,7 +817,7 @@ tt(ls_packages$download,
 tt(ls_packages$clean, 
   width = c(0.2, 0.5, 0.3),
   caption = "Example packages for cleaning data with API\\label{tbl-clean}") |> 
-    style_tt(theme = "latex", tabularray_inner = "stretch=0",
+    theme_latex(tabularray_inner = "stretch=0",
       multipage = TRUE) |> 
   style_tt(fontsize = 0.7)
 
@@ -829,7 +829,7 @@ tt(ls_packages$clean,
 tt(ls_packages$transform, 
   width = c(0.2, 0.5, 0.3),
   caption = "Example packages for transforming data with API\\label{tbl-transform}") |> 
-   style_tt(theme = "latex",tabularray_inner = "stretch=0",
+  theme_latex(tabularray_inner = "stretch=0",
       multipage = TRUE) |> 
   style_tt(fontsize = 0.7)
 
